Enum task_status {
  todo
  in_progress
  done
}

Enum task_priority {
  low
  medium
  high
}

Table users {
  id integer [pk, increment]
  name varchar(100) [not null]
  email varchar(255) [not null, unique]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table projects {
  id integer [pk, increment]
  name varchar(150) [not null]
  description text
  owner_id integer [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table tasks {
  id integer [pk, increment]
  title varchar(255) [not null]
  description text
  status task_status [not null, default: 'todo']
  priority task_priority [not null, default: 'medium']
  due_date date
  project_id integer [not null]
  assignee_id integer [null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}


Ref: projects.owner_id > users.id [delete: restrict]

Ref: tasks.project_id > projects.id [delete: cascade]

Ref: tasks.assignee_id > users.id [delete: set null]